- Auto-detect receipt of Genesis minting batons or coins
- Auto-name newly received tokens within Add Token Dialog after double-click (this was already implemented for right-click > Add token)
- Disable change address options in preferences
- Allow OP_RETURN entry in SLP wallets, but disable when a token is selected
- Reordered Send Tab amount input fields and moved token selector above amount inputs
- Ported many goodies from the [EC 4.0.6 release](https://github.com/Electron-Cash/Electron-Cash/releases/tag/4.0.6) including: CoinText support (SLP sending is not supported), automatic high resolution scaling

3.5 Updates & Features
-----
- Added grouped NFT support, see [NFT1 spec](https://github.com/simpleledger/slp-specifications/blob/master/slp-nft-1.md)
- Added SLPDB Graph Search feature to speed up local validation, not used with NFT1 tokens
- Parallelized Type 0x01 SLP validator to run a thread for each token ID, also fixed validator stability
- Added SLP support in Receive tab
- Refactored SLP coin selection code
- Added pre-sign check to double check against SLP burns
- Various other bug fixes and improvements
- Various improvements ported from EC

3.5.1 Updates & Features
-----
- Added Hardware wallet support for Ledger devices (Nano S & X work with SLP)
- Fixed Burn Tool for imported private key wallet type
- SLP URI payment requests now prompt the user to add token if not already in wallet
- Added private key encryption support (BIP38)
- Added prefix to addresses in private key exports
- Fixed recent BitPay breaking changes
- Ported "Add hardware wallet support" udev feature for linux devices
- Other fixes and improvements ported from Electron Cash upstream

3.5.2 Updates & Features (DRAFT)
-----
- Improved stability of NFT1 validator with unit tests
- Patched NFT1 parser for spec conformance
- Updated SLP Graph Search to use new c++ server backend
- Added Satochip hardware wallet support